# Task-Scheduler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  personal.cpp  personal.h  project.h  scheduler.cpp  scheduler.h  scheduler.hpp  study.cpp  study.h  task.cpp  task.h  taskList.cpp  taskList.h  test  tests  work.cpp  work.h
.github/workflows/: main.yml
header/: personal.h  scheduler.h  study.h  task.h  taskList.h  work.h
src/: personal.cpp  scheduler.cpp  study.cpp  task.cpp  taskList.cpp  work.cpp
testFiles/: personal_test.hpp  scheduler_test.hpp  study_test.hpp  unit_test.cpp  work_test.hpp
tests/: scheduler_test.cpp  scheduler_test.hpp  taskList_Test.hpp  taskList_test.cpp  unit_test.cpp
